초대기능 추가 및 resource check 변경
